Adicionei um paragrafo

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Olá, Mundo!!!</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore fugit quasi excepturi delectus quas, illo ex vero unde suscipit voluptas explicabo. Repellendus perferendis aperiam eveniet ad dolore molestias possimus fuga!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate veniam eligendi quo, harum illum suscipit impedit neque laborum porro libero aliquam blanditiis maiores architecto commodi aspernatur ipsam natus totam omnis.</p>
 </body>
 </html>
